--- a/MemberRegistration/MemberRegistration.Business/MemberRegistration.Business.csproj
+++ b/MemberRegistration/MemberRegistration.Business/MemberRegistration.Business.csproj
@@ -37,6 +37,9 @@
     <Reference Include="FluentValidation, Version=9.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentValidation.10.1.0\lib\netstandard2.0\FluentValidation.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="PostSharp, Version=6.9.5.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>..\packages\PostSharp.Redist.6.9.5\lib\net45\PostSharp.dll</HintPath>
     </Reference>
@@ -59,6 +62,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="DependecyResolver\Ninject\BusinessModule.cs" />
     <Compile Include="ServiceAdapters\IKpsService.cs" />
     <Compile Include="ServiceAdapters\KpsServiceAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
