--- a/MemberRegistration/MemberRegistration.MvcWebUI/Web.config
+++ b/MemberRegistration/MemberRegistration.MvcWebUI/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="MembersDB" connectionString="Data Source=DESKTOP-2V8QO09\SQLEXPRESS;initial catalog=northwind; integrated security=true" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
